RESOLVED FIXED30120
[GTK] segfault when calling gst_video_format_parse_caps in the video sink
https://bugs.webkit.org/show_bug.cgi?id=30120
Summary [GTK] segfault when calling gst_video_format_parse_caps in the video sink
Philippe Normand
Reported 2009-10-06 05:30:39 PDT
Misuse of the format parameter triggers a segfault, breaks tests in the Debug tests. Will attach a trivial patch
Attachments
proposed patch (1.97 KB, patch)
2009-10-06 05:37 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2009-10-06 05:37:40 PDT
Created attachment 40712 [details] proposed patch
Xan Lopez
Comment 2 2009-10-06 05:38:39 PDT
Comment on attachment 40712 [details] proposed patch Thanks, r=me.
WebKit Commit Bot
Comment 3 2009-10-06 05:51:07 PDT
Comment on attachment 40712 [details] proposed patch Clearing flags on attachment: 40712 Committed r49176: <http://trac.webkit.org/changeset/49176>
WebKit Commit Bot
Comment 4 2009-10-06 05:51:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.