2009-10-06  Philippe Normand  <pnormand@igalia.com>

Reviewed by Xan Lopez.

        [GTK] segfault when calling gst_video_format_parse_caps in the video sink
        https://bugs.webkit.org/show_bug.cgi?id=30120

        Fix use of gst_video_format_parse_caps()

        * platform/graphics/gtk/VideoSinkGStreamer.cpp:
        (webkit_video_sink_idle_func):

Canonical link: https://commits.webkit.org/40735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49176 268f45cc-cd09-0410-ab3c-d52691b4dbfc